fix fedora workflow

--- a/.github/workflows/single_platform_ubuntu.yaml
+++ b/.github/workflows/single_platform_ubuntu.yaml
@@ -57,7 +57,9 @@ jobs:
             librdkafka-dev \
             protobuf-compiler \
             libprotobuf-dev \
-            ninja-build
+            ninja-build \
+            lld \
+            libasan8
 
       - name: Download and install latest Boost
         run: |
