install asan on fedora

--- a/.github/workflows/single_platform_fedora.yml
+++ b/.github/workflows/single_platform_fedora.yml
@@ -33,7 +33,7 @@ jobs:
             gcc gcc-c++ glibc-devel cmake ninja-build wget tar \
             openssl-devel libcurl-devel libuv-devel \
             python3-devel protobuf-compiler protobuf-devel \
-            xz-devel make which gawk lld
+            xz-devel make which gawk lld libasan
 
       - name: Download and install Boost 1.88.0
         run: |
