Refactor AOE headers & exchange APIs, unify interfaces, and improve io_context management
- Swap default websocket exchange_api_default.h for c_exchange_api.h across Binance & Bybit
- Consolidate i_exchange_api interfaces into aoe::api/i_exchange_api and re‑export via using‑aliases
- Delete redundant SingleOrderAPIDefault implementations; wire up c_exchange_api
- Reorder and deduplicate #includes in aoe/aoe.h
- Add Start() method to RestSessionRW and WebSocketSessionRW; switch co_spawn to detached use
- Introduce executor_work_guard for io_context in Infrastructure and OrderBookInfraContextDefault to prevent run() from exiting
- Move thread launch into constructor bodies (jthread default‑construct + assign in ctor) to ensure proper this initialization
- Refine OrderMinQtyCalculator alignment check to use rounding
- Extend Strategy & StrategyEngine interfaces with SetBidPrice/SetAskPrice and wire into implementation
- Update examples (29, 30, 33, 41, CMakeLists) to use new exchange API, session Start(), and proper ioc.run() sequencing

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -37,3 +37,4 @@ add_subdirectory(example40)
 add_subdirectory(example41)
 add_subdirectory(example42)
 add_subdirectory(example43)
+add_subdirectory(example44)
