Refactor infrastructure and improve trading pair support
Key changes:

1. Infrastructure improvements:
- Reordered session member in OrderBookInfraContext for better destruction order
- Replaced jthread with boost::asio::post for IO context execution
- Added proper session stopping in StopAsync()
- Enhanced WebSocket session cleanup with promises/futures for proper shutdown

2. Trading pair enhancements:
- Expanded supported trading pairs (added ETHBTC, BNBUSDT, SOLBNB, XRPUSDT, ADAUSDT, ADAXRP etc.)
- Updated converters and mappings for new trading pairs
- Added validation for trading pair in snapshot processing

3. Performance and stability:
- Added latency measurement for Binance depth updates
- Reduced verbose logging in JSON parsers
- Improved error handling for missing trading pairs
- Added proper cancellation support in WebSocket sessions

4. New features:
- Added base TradeSubscriptionBuilder for spot and futures
- Extended Bybit support with linear tickers channel
- Improved memory pool constants for funding rate events

5. Bug fixes:
- Fixed trading pair initialization in OrderBookEventInterface
- Ensured proper trading pair setting in snapshot listeners
- Added missing trading pair checks in sync logic

The changes improve stability, add support for more trading pairs, enhance performance monitoring, and provide better resource cleanup during shutdown.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -38,3 +38,6 @@ add_subdirectory(example41)
 add_subdirectory(example42)
 add_subdirectory(example43)
 add_subdirectory(example44)
+add_subdirectory(example45)
+add_subdirectory(example46)
+add_subdirectory(example47)
